# belajar-code

./: .gitignore  1.c  BacaDataCSV.c  BelajarString.c  DaftarNilai.c  Dicoding.c  FPB-KPK.c  FPB.c  Jumlah paling Kecil.c  MencariManikManikyangHilang.c  NamadanUsia.c  PalindromTersembunyi.c  README.md  SORT BUBBLE.c  StructVolumeBalok.c  alvin.c  angpauwlebaran.c  bayarparkir.c  belajar.c  char.c  coba.c  combine.c  faris.c  graph.c  hitungkata.c  kesehatan bebek 2.c  kesehatan bebek.c  latarray.c  latihan.c  mengganti karakter.c  stringalvin.c  test.c  toki.c  tracing,c.c
Belajar_ASM/: 2 skala desimal.asm  3 sensor huruf.asm  Elemen_MatriksVerYube.asm  Kerucut.asm  Luas_Segitiga.asm  P10 Stack.asm  P10 fungsi Tambah.asm  P10 nilai akhir.asm  P11 String Mencari Huruf.asm  P11 String Panjang Kata.asm  P11 String Weekend.asm  P12 float JarakTitikAsal.asm  P12 float KellLingkaran.asm  P12 float RataanSuhu %.1f.asm  P8 Elemen_Matriks.asm  P8 Jumlah_ElemenMatriksSebaris.asm  P8 Jumlah_ElemenMatriksSebarisVerAlvin.asm  P8 Jumlah_ElemenMatriksSebarisVerYube.asm  P8 jumlah matriks.asm  P9 Dua Pangkat (List).asm  P9 kuadrat.asm  P9 pangkat.asm  Perkalian_MatriksSkalar.asm  Perkalian_MatriksSkalarLoop.asm  kondisi.asm  (+3 more)
rust/belajar-axum-web/: Cargo.toml
rust/belajar-axum-web/src/: main.rs
rust/belajar-rust-crate/: Cargo.toml
rust/belajar-rust-crate/bye/: Cargo.toml
rust/belajar-rust-crate/bye/src/: lib.rs
rust/belajar-rust-crate/hello/src/: lib.rs
rust/belajar-rust-crate/src/: main.rs
rust/simple-api/: Cargo.toml
rust/simple-api/src/: constants.rs  main.rs  routes.rs
rust/simple-api/src/checker/: handler.rs  router.rs
rust/simple-api/src/simple/: handler.rs  mod.rs  model.rs  router.rs
(+1148 files in other folders)
