[package]
name = "belajar-axum-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-test = "17.3.0"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
