[package]
name = "simple-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
